# llm-toolset

./: .gitignore  AGENTS.md  LICENSE  README.md
godot-editor-mcp/: .gitignore  AGENTS.md  CODE.md  HISTORY.md  MCP-TODO.md  README.md  ROADMAP.md  TODO.md  pyproject.toml  server.py
godot-editor-mcp/docs/: index.md  workflow.md
godot-editor-mcp/docs/architecture/: asset-scene-services.md  automated-verification.md  bridge-discovery-errors.md  editor-state-diagnostics.md  index.md  local-project-process-services.md  mcp-presentation.md  (+7 more)
godot-editor-mcp/godot_editor_mcp/: __init__.py  assets.py  bridge.py  cli.py  discovery.py  errors.py  launcher.py  schema_validation.py  server.py  state_payloads.py  stdio.py  tool_catalog.py  tool_dispatch.py  waiting.py
godot-editor-mcp/plugin/: project.godot
godot-editor-mcp/tests/: test_assets.py  test_bridge.py  test_cli.py  test_contracts.py  test_discovery.py  test_launcher.py  test_reload_integration.py  test_schema_validation.py  test_server.py  test_state_payloads.py  test_stdio.py  test_waiting.py
rooted-files-mcp/: AGENTS.md  CODE.md  README.md  ROADMAP.md  pyproject.toml  server.py
rooted-files-mcp/docs/: index.md  workflow.md
rooted-files-mcp/rooted_files_mcp/: __init__.py  configuration.py  filesystem.py  server.py
rooted-files-mcp/tests/: test_configuration.py  test_filesystem.py  test_server.py
unreal-editor-mcp/: .gitignore  AGENTS.md  HISTORY.md  README.md  ROADMAP.md  pyproject.toml  server.py
unreal-editor-mcp/docs/: development-environment.md  draft.md  index.md  issues.md  notice.md  workflow.md
unreal-editor-mcp/examples/: DefaultEditorPerProjectUserSettings.ini  action-catalog-workflow.json  complete-atomic-graph-workflow.json  component-default-workflow.json  creation-workflow.json  function-local-workflow.json  game-data-workflow.json  game-instance-workflow.json  game-mode-game-state-workflow.json  graph-node-lifecycle-workflow.json  inspection-queries.json  lm-studio.json  macro-custom-event-workflow.json  member-variable-workflow.json  multiplayer-framework-workflow.json  pin-default-connection-workflow.json
unreal-editor-mcp/scripts/: deploy_plugin_windows.cmd  deploy_plugin_windows.py  package_plugin.cmd  package_plugin.py  run_headless_integration.cmd  run_headless_integration.py
unreal-editor-mcp/tests/: test_bridge.py  test_contracts.py  test_deploy_plugin_windows.py  test_errors.py  test_headless_integration.py  test_package_plugin.py  test_platforms.py  test_project_discovery.py  test_schema_validation.py  test_server_stdio.py
unreal-editor-mcp/unreal_editor_mcp/: __init__.py  bridge.py  cli.py  discovery.py  errors.py  platforms.py  project.py  schema_validation.py  server.py  stdio.py  tool_catalog.py
(+380 files in other folders)
